proj1/tests/other-tests/minz-tests/correct/autograder-test-assign6.py
# Assign to target list (2).

b = [1]
a = [1, 2, 3]

c, b[0], d = a

print c, b, d
