proj1/tests/other-tests/minz-tests/error/fn_no_colon.py
def f(a, b, c)
    print(3)